src/main/java/C0Compiler/antlr/C0Parser.java
// Generated from D:/Project/Java/qwer/src/main/java/org/example\C0.g4 by ANTLR 4.8
package C0Compiler.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class C0Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTSYS=1, VOIDSYS=2, COMMA=3, SCANFSYS=4, PRINTFSYS=5, RETURNSYS=6, WHILESYS=7, 
		MAINSYS=8, ENDSYS=9, IFSYS=10, EQUALSYS=11, ELSESYS=12, LBRACE=13, RBRACE=14, 
		LPARENTHESE=15, RPARENTHESE=16, ID=17, INT=18, AddSub=19, Mul=20, WS=21;
	public static final int
		RULE_prog = 0, RULE_stat = 1, RULE_program = 2, RULE_var = 3, RULE_funvoid = 4, 
		RULE_funint = 5, RULE_main = 6, RULE_other = 7, RULE_otherrt = 8, RULE_senlist = 9, 
		RULE_sen = 10, RULE_ifsys = 11, RULE_ifsysadd = 12, RULE_elsesyss = 13, 
		RULE_whilesys = 14, RULE_personal = 15, RULE_value = 16, RULE_returnsys = 17, 
		RULE_returnsysvoid = 18, RULE_read = 19, RULE_write = 20, RULE_exp = 21, 
		RULE_expadd = 22, RULE_term = 23, RULE_termadd = 24, RULE_factor = 25, 
		RULE_perFun = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stat", "program", "var", "funvoid", "funint", "main", "other", 
			"otherrt", "senlist", "sen", "ifsys", "ifsysadd", "elsesyss", "whilesys", 
			"personal", "value", "returnsys", "returnsysvoid", "read", "write", "exp", 
			"expadd", "term", "termadd", "factor", "perFun"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'int'", "'void'", "','", "'scanf'", "'printf'", "'return'", "'while'", 
			"'main'", "';'", "'if'", "'='", "'else'", "'{'", "'}'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTSYS", "VOIDSYS", "COMMA", "SCANFSYS", "PRINTFSYS", "RETURNSYS", 
			"WHILESYS", "MAINSYS", "ENDSYS", "IFSYS", "EQUALSYS", "ELSESYS", "LBRACE", 
			"RBRACE", "LPARENTHESE", "RPARENTHESE", "ID", "INT", "AddSub", "Mul", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "C0.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public C0Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54);
				stat();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==INTSYS || _la==VOIDSYS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public List<FunvoidContext> funvoid() {
			return getRuleContexts(FunvoidContext.class);
		}
		public FunvoidContext funvoid(int i) {
			return getRuleContext(FunvoidContext.class,i);
		}
		public List<FunintContext> funint() {
			return getRuleContexts(FunintContext.class);
		}
		public FunintContext funint(int i) {
			return getRuleContext(FunintContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(61);
					var();
					}
					} 
				}
				setState(66);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(71);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(69);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case VOIDSYS:
						{
						setState(67);
						funvoid();
						}
						break;
					case INTSYS:
						{
						setState(68);
						funint();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(73);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(74);
			main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode INTSYS() { return getToken(C0Parser.INTSYS, 0); }
		public List<TerminalNode> ID() { return getTokens(C0Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(C0Parser.ID, i);
		}
		public TerminalNode ENDSYS() { return getToken(C0Parser.ENDSYS, 0); }
		public List<TerminalNode> COMMA() { return getTokens(C0Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(C0Parser.COMMA, i);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(INTSYS);
			setState(77);
			match(ID);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(78);
				match(COMMA);
				setState(79);
				match(ID);
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(ENDSYS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunvoidContext extends ParserRuleContext {
		public TerminalNode VOIDSYS() { return getToken(C0Parser.VOIDSYS, 0); }
		public TerminalNode ID() { return getToken(C0Parser.ID, 0); }
		public TerminalNode LPARENTHESE() { return getToken(C0Parser.LPARENTHESE, 0); }
		public TerminalNode RPARENTHESE() { return getToken(C0Parser.RPARENTHESE, 0); }
		public OtherContext other() {
			return getRuleContext(OtherContext.class,0);
		}
		public FunvoidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funvoid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterFunvoid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitFunvoid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitFunvoid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunvoidContext funvoid() throws RecognitionException {
		FunvoidContext _localctx = new FunvoidContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funvoid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(VOIDSYS);
			setState(88);
			match(ID);
			setState(89);
			match(LPARENTHESE);
			setState(90);
			match(RPARENTHESE);
			setState(91);
			other();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunintContext extends ParserRuleContext {
		public TerminalNode INTSYS() { return getToken(C0Parser.INTSYS, 0); }
		public TerminalNode ID() { return getToken(C0Parser.ID, 0); }
		public TerminalNode LPARENTHESE() { return getToken(C0Parser.LPARENTHESE, 0); }
		public TerminalNode RPARENTHESE() { return getToken(C0Parser.RPARENTHESE, 0); }
		public OtherrtContext otherrt() {
			return getRuleContext(OtherrtContext.class,0);
		}
		public FunintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterFunint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitFunint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitFunint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunintContext funint() throws RecognitionException {
		FunintContext _localctx = new FunintContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(INTSYS);
			setState(94);
			match(ID);
			setState(95);
			match(LPARENTHESE);
			setState(96);
			match(RPARENTHESE);
			setState(97);
			otherrt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode VOIDSYS() { return getToken(C0Parser.VOIDSYS, 0); }
		public TerminalNode MAINSYS() { return getToken(C0Parser.MAINSYS, 0); }
		public TerminalNode LPARENTHESE() { return getToken(C0Parser.LPARENTHESE, 0); }
		public TerminalNode RPARENTHESE() { return getToken(C0Parser.RPARENTHESE, 0); }
		public OtherContext other() {
			return getRuleContext(OtherContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(VOIDSYS);
			setState(100);
			match(MAINSYS);
			setState(101);
			match(LPARENTHESE);
			setState(102);
			match(RPARENTHESE);
			setState(103);
			other();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(C0Parser.LBRACE, 0); }
		public SenlistContext senlist() {
			return getRuleContext(SenlistContext.class,0);
		}
		public ReturnsysvoidContext returnsysvoid() {
			return getRuleContext(ReturnsysvoidContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(C0Parser.RBRACE, 0); }
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public OtherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_other; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterOther(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitOther(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitOther(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OtherContext other() throws RecognitionException {
		OtherContext _localctx = new OtherContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_other);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(LBRACE);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INTSYS) {
				{
				{
				setState(106);
				var();
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			senlist();
			setState(113);
			returnsysvoid();
			setState(114);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherrtContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(C0Parser.LBRACE, 0); }
		public SenlistContext senlist() {
			return getRuleContext(SenlistContext.class,0);
		}
		public ReturnsysContext returnsys() {
			return getRuleContext(ReturnsysContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(C0Parser.RBRACE, 0); }
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public OtherrtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherrt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterOtherrt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitOtherrt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitOtherrt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OtherrtContext otherrt() throws RecognitionException {
		OtherrtContext _localctx = new OtherrtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_otherrt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(LBRACE);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INTSYS) {
				{
				{
				setState(117);
				var();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			senlist();
			setState(124);
			returnsys();
			setState(125);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SenlistContext extends ParserRuleContext {
		public List<SenContext> sen() {
			return getRuleContexts(SenContext.class);
		}
		public SenContext sen(int i) {
			return getRuleContext(SenContext.class,i);
		}
		public SenlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_senlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterSenlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitSenlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitSenlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SenlistContext senlist() throws RecognitionException {
		SenlistContext _localctx = new SenlistContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_senlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			sen();
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCANFSYS) | (1L << PRINTFSYS) | (1L << WHILESYS) | (1L << IFSYS) | (1L << LBRACE) | (1L << ID))) != 0)) {
				{
				{
				setState(128);
				sen();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SenContext extends ParserRuleContext {
		public SenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sen; }
	 
		public SenContext() { }
		public void copyFrom(SenContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhilefunContext extends SenContext {
		public WhilesysContext whilesys() {
			return getRuleContext(WhilesysContext.class,0);
		}
		public WhilefunContext(SenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterWhilefun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitWhilefun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitWhilefun(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValuefunContext extends SenContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ValuefunContext(SenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterValuefun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitValuefun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitValuefun(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IffunContext extends SenContext {
		public IfsysContext ifsys() {
			return getRuleContext(IfsysContext.class,0);
		}
		public IffunContext(SenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterIffun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitIffun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitIffun(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReadfunContext extends SenContext {
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public ReadfunContext(SenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterReadfun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitReadfun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitReadfun(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PersonalfunContext extends SenContext {
		public PersonalContext personal() {
			return getRuleContext(PersonalContext.class,0);
		}
		public PersonalfunContext(SenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterPersonalfun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitPersonalfun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitPersonalfun(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WritefunContext extends SenContext {
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public WritefunContext(SenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterWritefun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitWritefun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitWritefun(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SenlistfunContext extends SenContext {
		public TerminalNode LBRACE() { return getToken(C0Parser.LBRACE, 0); }
		public SenlistContext senlist() {
			return getRuleContext(SenlistContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(C0Parser.RBRACE, 0); }
		public SenlistfunContext(SenContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).enterSenlistfun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof C0Listener ) ((C0Listener)listener).exitSenlistfun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof C0Visitor ) return ((C0Visitor<? extends T>)visitor).visitSenlistfun(this);
			else return visitor.visitChildren(this);
		}
	}
